--- a/public/admin/css/myproduct.css
+++ b/public/admin/css/myproduct.css
@@ -3,7 +3,7 @@
 }
 .input_left{
     width: 100%;
-    padding-right: 5px;
+    /* padding-right: 5px; */
 }
 .input_right{
     width: 100%;
@@ -13,7 +13,14 @@
     padding-left: 5px;
     padding-top: 9px;
 }
-
+#data-table_length{
+    float: left;
+    margin-bottom: 5px;
+}
+#data-table_filter{
+    float: right;
+    margin-bottom: 5px;
+}
 /* .custom-select {
     display: inline-block;
     width: 100%;
